# traider

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  config.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run.sh
alembic/: env.py
app/: main.py
app/api/: api.py  error.py
app/api/v1/controllers/dashboard/: controller.py  schemas.py
app/api/v1/controllers/preset/: controller.py
app/api/v1/controllers/s3/: controller.py
app/api/v1/controllers/trade/: controller.py
app/api/v1/controllers/websocket/: websocket_controller.py
app/core/: settings.py
app/db/: base.py  crud.py  crud_base.py  init_db.py  session.py
app/trade/: crud_trades.py  data_fetcher.py  ml_optimizer.py  run_trading.py  strategy.py
app/trade/crud/: crud_holdings.py  crud_parameters.py  crud_trades.py
app/trade/models/: holdings.py  parameters.py  trades.py
app/trade/schemas/: holdings.py  parameters.py  trades.py
app/utils/: logger.py  proess_handler.py  s3_utils.py
scripts/: .pre-commit-config.yaml  changed.sh  format.sh  hooks.sh  lint.sh  target.sh  test.sh  typecheck.sh
